# wave-packets

./: CMakeLists.txt  README.md  basic.shader  main.cpp  wavepacket.cpp  wavepacket.h
output/: initWave.txt  plotData.ipynb
src/: CMakeLists.txt  dataOutput.cpp  renderer.cpp  shader.cpp  vertexArray.cpp  vertexBuffer.cpp
src/include/: dataOutput.h  renderer.h  shader.h  vertexArray.h  vertexBuffer.h  vertexBufferLayout.h
wavemagic/: CMakeLists.txt  wavepacket.cpp
wavemagic/include/: wavepacket.h
