INCLUDE_DIRECTORIES(
    ./include
    ../external/glew/include
    ../external/glfw/include)

include(FetchContent)
FetchContent_Declare(
    glm
    GIT_REPOSITORY	https://github.com/g-truc/glm.git
    GIT_TAG 	bf71a834948186f4097caa076cd2663c69a10e1e #refs/tags/1.0.1
)

FetchContent_MakeAvailable(glm)

LINK_LIBRARIES(${PROJECT_NAME} glm::glm)

add_library(renderClasses 
    vertexArray.cpp
    vertexBuffer.cpp
    shader.cpp
    renderer.cpp
    )